Unused properties removed from parent POM